# surreal-axum-demo

./: Cargo.toml  Readme.md  cargo-clippy.toml  docker-compose.yml
rest-client/: health.http  todo.http
src/: lib.rs  main.rs  settings.rs
src/api/: mod.rs  router.rs
src/application/commands/: create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
src/application/commands/requests/: update_todo_request.rs
src/application/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs
src/domain/models/: todo.rs
src/infrastructure/: error.rs
src/infrastructure/data/db_context/: surreal_context.rs
src/infrastructure/data/repositories/: todo_repository.rs
src/intrastructure/repositories/: todo_repository.rs
